--- a/public/index.html
+++ b/public/index.html
@@ -41,12 +41,8 @@
     -->
 </body>
 
-<script src="https://unpkg.com/react/umd/react.production.js" crossorigin />
-
-<script
-  src="https://unpkg.com/react-dom/umd/react-dom.production.js"
-  crossorigin
-/>
+<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 
 <script
   src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
